--- a/win-prog-course-exp/win-prog-course-exp.csproj
+++ b/win-prog-course-exp/win-prog-course-exp.csproj
@@ -61,6 +61,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="NewStringValueDlg.xaml.cs">
+      <DependentUpon>NewStringValueDlg.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Util.cs" />
     <Page Include="ChapterSideSelector.xaml">
       <SubType>Designer</SubType>
@@ -82,6 +85,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="NewKeyDlg.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NewStringValueDlg.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
