--- a/win-prog-course-exp/win-prog-course-exp.csproj
+++ b/win-prog-course-exp/win-prog-course-exp.csproj
@@ -61,10 +61,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChapterContent1.xaml.cs">
+      <DependentUpon>ChapterContent1.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NewStringValueDlg.xaml.cs">
       <DependentUpon>NewStringValueDlg.xaml</DependentUpon>
     </Compile>
     <Compile Include="Util.cs" />
+    <Page Include="ChapterContent1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ChapterSideSelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
