--- a/win-prog-course-exp/win-prog-course-exp.csproj
+++ b/win-prog-course-exp/win-prog-course-exp.csproj
@@ -39,6 +39,7 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=8.0.18.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -76,6 +77,9 @@
     <Compile Include="ChapterContent6.xaml.cs">
       <DependentUpon>ChapterContent6.xaml</DependentUpon>
     </Compile>
+    <Compile Include="InsertDlg.xaml.cs">
+      <DependentUpon>InsertDlg.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NewStringValueDlg.xaml.cs">
       <DependentUpon>NewStringValueDlg.xaml</DependentUpon>
     </Compile>
@@ -101,6 +105,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ChapterSideSelector.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="InsertDlg.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
